# my_CourseWork3

./: README.md  pyproject.toml  requirements.txt
src/: func.py  main.py
tests/: test_func.py
