[tool.poetry]
name = "my-coursework3"
version = "0.1.0"
description = ""
authors = ["Nina Finageeva <finageeva.nina@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
